# k8s-postgresql-controller

./: .gitignore  Cargo.toml  Dockerfile  README.md  crd.yaml  flake.nix
src/: crdgen.rs  crds.rs  database.rs  database_controller.rs  error.rs  main.rs  manager_controller.rs  server.rs  table_controller.rs
