[package]
name = "postgresql-controller"
version = "0.1.0"
edition = "2021"
default-run = "postgresql-controller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
futures = "0.3.30"
k8s-openapi = { version = "0.20.0", features = ["v1_28"] }
kube = { version = "0.87.2", features = ["runtime", "client", "derive"] }
schemars = "0.8.16"
serde = "1.0.194"
serde_json = "1.0.110"
serde_yaml = "0.9.30"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
